--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -22,3 +22,5 @@ e.snap = Server error. Snapshot upload failed.
 m.snap_success = Snapshot saved.
 #l.edit_snapshot_desc = You can save this image as your room snapshot. It will appear along with your room description in the Whirledwide view. You will be able to access your snapshot at:
 #m.snapshot_some_failed = Note: Some room elements were not able to be snapshotted.
+
+m.sceneItemName = Snapshot: {0}
