New descriptions for checkboxes.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -16,8 +16,9 @@
 t.snap = Room snapshot
 b.snap_occs = Include occupants?
 b.snap_overlays = Include overlays (chat)?
-b.snap_canonical = Use as room thumbnail
+b.snap_scene_thumbnail = Use as room preview
 b.snap_update = Update
+b.snap_gallery = Add to 'My Images'
 e.snap = Server error. Snapshot upload failed.
 m.snap_success = Snapshot saved.
 #l.edit_snapshot_desc = You can save this image as your room snapshot. It will appear along with your room description in the Whirledwide view. You will be able to access your snapshot at:
