--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -150,7 +150,7 @@ l.avail_1 = Available to friends
 l.avail_2 = Unavailable
 
 # avatar viewer
-i.avatarScale = Scale avatar
+i.spriteScale = Scale media
 b.resetScale = Reset scale
 b.talk = Talk
 b.idle = Idle
