Made width and height of room embeds a translation parameter

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -91,7 +91,7 @@ l.statusPrompt = is
 i.recent_rooms = Show recent rooms list
 
 # note: the embed tag should be coordinated with embedding tags used in WidgetUtilImpl.java
-m.embed = <object classid='clsid:d27cdb6e-ae6d-11cf-96b8-444553540000' codebase='http://active.macromedia.com/flash7/cabs/swflash.cab#version=9,0,0,0' allowScriptAccess='always' width='100%' height='600'><param name='movie' value='{1}'/><param name='wmode' value='opaque'/><param name='FlashVars' value='{0}'/><embed width='100%' height='600' flashvars='{0}' src='{1}' allowScriptAccess='always' wmode='opaque' pluginspace='http://www.macromedia.com/go/getflashplayer' ntype='application/x-shockwave-flash'></embed></object><br/><center><a href="http://whirled.com/" target="_top">Launch the full version of Whirled</a></center>
+m.embed = <object classid='clsid:d27cdb6e-ae6d-11cf-96b8-444553540000' codebase='http://active.macromedia.com/flash7/cabs/swflash.cab#version=9,0,0,0' allowScriptAccess='always' width='{2}' height='{3}'><param name='movie' value='{1}'/><param name='wmode' value='opaque'/><param name='FlashVars' value='{0}'/><embed width='{2}' height='{3}' flashvars='{0}' src='{1}' allowScriptAccess='always' wmode='opaque' pluginspace='http://www.macromedia.com/go/getflashplayer' ntype='application/x-shockwave-flash'></embed></object><br/><center><a href="http://whirled.com/" target="_top">Launch the full version of Whirled</a></center>
 b.copy_to_clipboard = Copy to your clipboard
 
 t.add_furni = Add Furniture
