A translation message for m.session_expired.

--- a/rsrc/en_US/i18n/global.properties
+++ b/rsrc/en_US/i18n/global.properties
@@ -17,6 +17,7 @@ b.cancel = Cancel
 
 # Connection related
 m.disconnected = You have been disconnected from the server.
+m.session_expired = Your session has expired. Please reload the page.
 
 # Time translations
 m.millisecond.0 = 0 milliseconds
