This message seems to come in both forms.

--- a/rsrc/en_US/i18n/global.properties
+++ b/rsrc/en_US/i18n/global.properties
@@ -41,6 +41,7 @@ m.player_game_over = Game over for {0}.
 
 # Global errors
 e.internal_error = An unexpected error occurred on the server.
+m.internal_error = An unexpected error occurred on the server.
 e.access_denied = Access denied.
 
 m.flow_gain = +{0} coins!
