More messages for snapshots.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -19,9 +19,14 @@ b.snap_overlays = Include overlays (chat)?
 b.snap_scene_thumbnail = Use as room preview
 b.snap_update = Update
 b.snap_gallery = Add to 'My Images'
+b.snap_cancel = Cancel upload
+b.snap_progress = Uploading snapshot...
+b.snap_upload_starting = Upload starting
+b.snap_upload_thumb = Uploading room preview
+b.snap_upload_snap = Uploading snapshot item
+b.snap_upload_fail = Uploading failed
 e.snap = Server error. Snapshot upload failed.
 m.snap_success = Snapshot saved.
-m.snap_progress = Uploading snapshot...
 #l.edit_snapshot_desc = You can save this image as your room snapshot. It will appear along with your room description in the Whirledwide view. You will be able to access your snapshot at:
 #m.snapshot_some_failed = Note: Some room elements were not able to be snapshotted.
 
