- Work for the new Share-It popup - The popup is now non-modal

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -91,8 +91,8 @@ l.statusPrompt = is
 i.recent_rooms = Show recent rooms list
 
 # note: the embed tag should be coordinated with embedding tags used in WidgetUtilImpl.java
-m.embed = <object classid='clsid:d27cdb6e-ae6d-11cf-96b8-444553540000' codebase='http://active.macromedia.com/flash7/cabs/swflash.cab#version=9,0,0,0' allowScriptAccess='always' width='{2}' height='{3}'><param name='movie' value='{1}'/><param name='wmode' value='opaque'/><param name='FlashVars' value='{0}'/><embed width='{2}' height='{3}' flashvars='{0}' src='{1}' allowScriptAccess='always' wmode='opaque' pluginspace='http://www.macromedia.com/go/getflashplayer' ntype='application/x-shockwave-flash'></embed></object><br/><center><a href="http://whirled.com/" target="_top">Launch the full version of Whirled</a></center>
-b.copy_to_clipboard = Copy to your clipboard
+m.embed = <object width='{2}' height='{3}' classid='clsid:d27cdb6e-ae6d-11cf-96b8-444553540000' codebase='http://active.macromedia.com/flash7/cabs/swflash.cab#version=9,0,0,0' allowScriptAccess='always'><param name='movie' value='{1}'/><param name='wmode' value='opaque'/><param name='FlashVars' value='{0}'/><embed width='{2}' height='{3}' flashvars='{0}' src='{1}' allowScriptAccess='always' wmode='opaque' pluginspace='http://www.macromedia.com/go/getflashplayer' ntype='application/x-shockwave-flash'></embed></object><br/><center><a href="http://whirled.com/" target="_top">Launch the full version of Whirled</a></center>
+b.copy_to_clipboard = Copy
 
 t.add_furni = Add Furniture
 l.add_furni_tip = Drag your furniture directly into the room.
@@ -211,8 +211,15 @@ l.recent_people = Recently seen...
 b.relogon_guest = Re-logon as a guest
 b.edit_prefs = Configure...
 
-t.embed_link_window = Embed This Scene
-l.embed_instruction = Copy the HTML below to your blog or website in order to embed this scene in it.
+t.share = Share this place
+l.embed_choose_size = Choose an embed size
+l.embed_size0 = Small
+l.embed_size1 = Medium
+l.embed_size2 = Full
+l.embed_dimensions = ({0}x{1})
+l.embed_instruction = Copy the HTML below to your blog or website:
+l.link_instruction = Link to this place. Just copy and paste!
+l.email_instruction = Enter email addresses below:
 
 # Problems with urls
 e.no_navigate = Unable to load requested page: {0}
