- Show the name of the game for the chat tab instead of "Game".   When embedded, this is the only thing that shows the game name. - Moved POP_CHANNEL_MENU to WorldController, where it's handled.   This meant I needed to import WorldController into ControlBar,   so maybe this damn thing should really be in the WorldControlBar. - Added a "clear chat" thing to the channel menu, but the chat   history is not clearing!

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -65,7 +65,6 @@ t.about = About Whirled
 m.about = <html><p align='center'><font size='+8'>Whirled</font><br>Copyright &#x00A9; 2007 - 2008, Three Rings Design, Inc.<br><br>Client build: {0}<br>Flash player version: {1}</p></html>
 
 # Control bar
-i.chatPrefs = Chat preferences
 i.volume = Sound volume
 i.zoom = Zoom the room view
 i.zoom_disabled = The room view is fully shown
@@ -193,15 +192,17 @@ m.no_online_friends = <No online friends>
 m.no_chatters = <No recent chatters>
 m.no_occupants = <None>
 
-m.hide_chat = Hide chat history (F9)
-m.show_chat = Show chat history (F9)
+b.chatPrefs = Chat preferences
+b.clearChat = Clear chat
+b.hide_chat = Hide chat history (F9)
+b.show_chat = Show chat history (F9)
 m.no_friends = No friends online
 m.no_groups = Not in any whirleds
-m.groups = Whirleds
-m.slide_chat = Slide chat
-m.overlay_chat = Overlay chat
-m.show_occ_list = Show occupants
-m.hide_occ_list = Hide occupants
+l.groups = Whirleds
+b.slide_chat = Slide chat
+b.overlay_chat = Overlay chat
+b.show_occ_list = Show occupants
+b.hide_occ_list = Hide occupants
 
 l.recent_chatters = Recent chatters...
 l.friends = Friends...
