Let's make that "clear all chat" until/unless we do localtype filtering from the history list.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -193,7 +193,7 @@ m.no_chatters = <No recent chatters>
 m.no_occupants = <None>
 
 b.chatPrefs = Chat preferences
-b.clearChat = Clear chat
+b.clearChat = Clear all chat
 b.hide_chat = Hide chat history (F9)
 b.show_chat = Show chat history (F9)
 m.no_friends = No friends online
