--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -80,6 +80,9 @@ l.not_rated = Not Rated
 l.invite_friends = Invite your friends to join your game:
 l.invite_no_friends = None of your friends are online.
 
+l.table = Table name
+l.default_table = {0}'s table
+
 l.guest_flow_title = You Earned {0} Coins!
 l.guest_flow_note = If you sign up now, you can keep it and buy cool stuff!
 
