--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -81,7 +81,7 @@ l.invite_friends = Invite your friends to join your game:
 l.invite_no_friends = None of your friends are online.
 
 l.table = Table name
-t.table = Your table's name is displayed in the lobby
+i.table = Your table's name is displayed in the lobby
 l.default_table = {0}'s table
 
 l.guest_flow_title = You Earned {0} Coins!
