Invite All friends checkbox in game table creation

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -79,6 +79,7 @@ l.not_rated = Not Rated
 
 l.invite_friends = Invite your friends to join your game:
 l.invite_no_friends = None of your friends are online.
+l.invite_all = Invite all
 
 l.table = Table name
 i.table = Your table's name is displayed in the lobby
