If a game stores a cookie for a user during play, we display a slightly different message in the "Sign up please wonderful Guest" dialog:
  Sign up! Save your game progress! Keep your coins

instead of:

  If you sign up now, you can keep it and buy cool stuff!

This changed text is in fact a lie. We don't save your progress if you sign up.
At some point we'll want to implement the (much more complicated) process of
saving a guest's game cookies along with their earned flow when they create an
account.

When we do that, then we can go even further and perhaps change the large title
font text to say "Save your progress!" instead of "You Earned NN Coins!" to
further emphasize this potentially more motivational benefit.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -87,6 +87,7 @@ l.default_table = {0}'s table
 
 l.guest_flow_title = You Earned {0} Coins!
 l.guest_flow_note = If you sign up now, you can keep it and buy cool stuff!
+l.guest_flowprog_note = Sign up! Save your game progress! Keep your coins!
 
 b.backToWhirled = Leave game
 b.backToLobby = {0} lobby
