Started converting the "back" button into a more general "go" button. - Simplified recent scenes. Just the recent scenes, ma'am, no confusing "branches" that nobody gives a shit about.

--- a/rsrc/en_US/i18n/world.properties
+++ b/rsrc/en_US/i18n/world.properties
@@ -11,6 +11,8 @@
 # e.foo = error
 # x.foo = optional translation that may or may not be present
 
+l.recent_scenes = Recent scenes
+
 
 # Snapshots
 t.snap = Room snapshot
