Further cleanup to the "go" menu.

--- a/rsrc/en_US/i18n/global.properties
+++ b/rsrc/en_US/i18n/global.properties
@@ -15,6 +15,9 @@
 b.ok = OK
 b.cancel = Cancel
 
+# Common messages
+m.none = <none>
+
 # Connection related
 m.disconnected = You have been disconnected from the server.
 m.session_expired = Your session has expired. Please reload the page.
@@ -43,5 +46,3 @@ m.player_game_over = Game over for {0}.
 e.internal_error = An unexpected error occurred on the server.
 m.internal_error = An unexpected error occurred on the server.
 e.access_denied = Access denied.
-
-m.flow_gain = +{0} coins!
