- Removed "back" buttons from the control bar during games. - Fixed a bug I made in WorldController's handleGoBack - In the go menu, always put a Back entry first. - added canMoveBack, which sets the enabled state of the Back menu item. - MsoyController has a way for things to register with it if they   want to provide menu items for the "go" menu. - When in games, custom "go" menu items are added to go to the lobby   or visit the "all games" page (TODO), and in the future, visit   the game's shop or whirled.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -22,7 +22,6 @@ l.gameLoading = Loading game data... please wait.
 e.no_gamedef = This game has a broken game definition.
 
 b.invite_to_game = Invite Friend
-b.back_to_lobby = Return to Lobby
 b.about = about
 b.buy = buy
 
@@ -89,8 +88,10 @@ l.guest_flow_title = You Earned {0} Coins!
 l.guest_flow_note = If you sign up now, you can keep it and buy cool stuff!
 l.guest_flowprog_note = Sign up! Save your game progress! Keep your coins!
 
-b.backToWhirled = Leave game
-b.backToLobby = {0} lobby
+b.allGames = All Games
+b.backToLobby = Game Lobby
+#b.shop = Game Shop
+#b.gameWhirled = Visit this game's Whirled
 b.rematch = Request a rematch
 b.replay = Play again
 
