Fully-functioning gameover panel. Now just needs style and love.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -95,6 +95,8 @@ b.backToLobby = Game Lobby
 b.rematch = Request a rematch
 b.replay = Play again
 
+m.goShopping = Visit whirled to go shopping.
+
 m.trophy_title = You earned a Trophy:
 m.trophy_earned = You earned the "{0}" trophy!
 
