Hm, let's make overlay chat in games be used whenever the client isn't big enough to show the sidebar, not just for gamestub embeds. Some i18n.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -119,3 +119,7 @@ t.quest_offer = You''re being offered a quest.
 t.quest_completion = You completed a quest!
 b.accept_quest = Accept
 b.decline_quest = Decline
+
+#
+# Gamestub-specific stuff
+t.players = Player list
