Absurd trial and error, trying to style the GameOverPanel.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -88,6 +88,7 @@ l.guest_flow_title = You Earned {0} Coins!
 l.guest_flow_note = If you sign up now, you can keep it and buy cool stuff!
 l.guest_flowprog_note = Sign up! Save your game progress! Keep your coins!
 
+t.gameOver = Game Over
 b.allGames = All Games
 b.backToLobby = Game Lobby
 #b.shop = Game Shop
