Minor cleanup and fixed a translation.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -80,6 +80,7 @@ l.invite_friends = Invite your friends to join your game:
 l.invite_no_friends = None of your friends are online.
 l.invite_all = Invite all
 
+t.tables = Join a Game
 l.table = Table name
 i.table = Your table's name is displayed in the lobby
 l.default_table = {0}'s table
