Cleaned up some menu items. - I use the "b." prefix for menu items, as they're essentially like buttons   (and sometimes we share a translation with a button anyway). - Removed trailing dots from some menu items. To me, that means that another   dialog will come up before any action is taken. - Go ahead and show "view member" and "visit member" in embedded clients.   The profile seems to not work, but it should.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -167,7 +167,7 @@ m.booted = You have been booted from {0}.
 e.booted = Sorry, you have been booted from that place.
 #m.boot_success = {0} has been booted.
 
-l.invite_follow = Invite to follow you
+b.invite_follow = Invite to follow you
 l.clear_followers = Clear followers
 l.stop_following = Stop following
 
@@ -175,10 +175,10 @@ m.avail_tip_0 = You are now allowing game invitations and requests from all user
 m.avail_tip_1 = You are now allowing game invitations and requests from only your friends.
 m.avail_tip_2 = You will not receive game invitations or requests from anyone.
 
-l.open_channel = Start private chat...
-l.visit_home = Visit home
-l.view_member = View member profile...
-l.visit_member = Visit member...
+b.open_channel = Start private chat
+b.visit_home = Visit home
+b.view_member = View member profile
+b.visit_member = Warp to member's location
 l.add_as_friend = Invite to be your friend
 
 i.play_game = Play '{0}'
