--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -224,6 +224,10 @@ l.link_instruction = Link to this place. Just copy and paste!
 l.email_addresses = Enter email addresses below:
 l.email_message = A personalized message to include:
 
+t.email_share = Share by email
+t.grab_link = Grab the link
+t.embed = Embed this place
+
 # Problems with urls
 e.no_navigate = Unable to load requested page: {0}
 t.missedUrl = Unable to navigate to URL
