Alignin', spacin', paddin', stylin', i18nin'

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -214,11 +214,13 @@ b.relogon_guest = Re-logon as a guest
 b.edit_prefs = Configure...
 
 t.share = Share this place
-l.embed_choose_size = Choose an embed size
-l.embed_size0 = Small
-l.embed_size1 = Medium
-l.embed_size2 = Full
+l.embed_choose_size = Choose an embed size:
+l.embed_size0 = Mini TV
+l.embed_size1 = Small
+l.embed_size2 = Medium
+l.embed_size3 = Large
 l.embed_dimensions = ({0}x{1})
+
 l.embed_instruction = Copy the HTML below to your blog or website:
 l.link_instruction = Link to this place. Just copy and paste!
 l.email_addresses = Enter email addresses below:
@@ -226,7 +228,7 @@ l.email_message = A personalized message to include:
 
 t.email_share = Share by email
 t.grab_link = Grab the link
-t.embed = Embed this place
+t.embed = Embed it
 
 # Problems with urls
 e.no_navigate = Unable to load requested page: {0}
