--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -49,12 +49,12 @@ m.help_httpstatus_error = Unable to access the requested page '{0}', error {1}.
 m.help_footnote = Please inform administrators about this error.
 
 # Tips
-m.tip_1 = Tip: Use your browser's back button to return to the previous room.
+#m.tip_1 = Tip: Use your browser's back button to return to the previous room.
 #m.tip_2 = Tip: Hold F6 to select or click chat text in an overlay.
-m.tip_2 = Tip: Press F7 or F8 to quickly switch between multiple chat tabs.
-m.tip_3 = Tip: Press F9 to show or hide chat history overlay.
-m.tip_4 = Tip: Hold 'shift' when selecting a location to fly.
-m.tip_5 = Tip: Type /help in your chat box to get a list of all chat commands.
+#m.tip_2 = Tip: Press F7 or F8 to quickly switch between multiple chat tabs.
+#m.tip_3 = Tip: Press F9 to show or hide chat history overlay.
+#m.tip_4 = Tip: Hold 'shift' when selecting a location to fly.
+#m.tip_5 = Tip: Type /help in your chat box to get a list of all chat commands.
 # TODO: these tips don't work very well at the moment... re-enable them when they do.
 #m.tip_2 = Tip: Hold F4 to click through avatars.
 #m.tip_3 = Tip: Hold F5 to click through furniture.
