New control bar buttons on the studio viewer.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -150,10 +150,10 @@ l.avail_1 = Available to friends
 l.avail_2 = Unavailable
 
 # avatar viewer
-i.spriteScale = Scale media
-b.resetScale = Reset scale
-b.talk = Talk
-b.idle = Idle
+i.spriteScale = Scale...
+i.resetScale = Reset scale
+i.talk = Test speaking action (if any)
+i.idle = Test idle action (if any)
 
 l.item_menu = This {0} item...
 b.complain = Complain about this user...
