The comment and share links in the header become more buttons on the control bar.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -78,8 +78,8 @@ i.hover = View clickable furniture
 i.notifications = No notifications to view
 i.notifications_avail = Click to view new notifications
 i.channel = Chat with friends and groups
-b.share = share
-b.comment = comment
+i.share = Share or embed this place
+i.comment = Leave a comment about this place
 b.instructions = instructions
 
 # Friends list
