Moved the instructions link to the control bar. Skins pending. (Button overload, but I'll deal with that soon..)

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -80,7 +80,7 @@ i.notifications_avail = Click to view new notifications
 i.channel = Chat with friends and groups
 i.share = Share or embed this place
 i.comment = Leave a comment about this place
-b.instructions = instructions
+i.instructions = Game instructions
 
 # Friends list
 l.emptyStatus = Enter status...
