--- a/rsrc/en_US/i18n/passport.properties
+++ b/rsrc/en_US/i18n/passport.properties
@@ -16,7 +16,17 @@ m.badge_awarded = You earned the "{0}" Badge!
 
 # badge names
 
-m.badge_name_e67b2bb3 = Friend 1
-m.badge_name_7f727a09 = Friend 2
-m.badge_name_d7a8c2c8 = Gamer 1
-m.badge_name_a168760c = Whirled Creator
+m.badge_name_f0c035cd = Furniture Builder
+m.badge_name_e6af01a4 = Judge
+m.badge_name_3aa0bef4 = Fixture
+m.badge_name_c4fd834b = Friendly
+m.badge_name_3ca5a071 = Outspoken
+m.badge_name_e6a0e95b = Contender
+m.badge_name_26873aba = Professional
+m.badge_name_8a19eba3 = Collector
+m.badge_name_1923c147 = Shopper
+m.badge_name_6e67007d = Character Designer
+m.badge_name_117171d7 = Landscape Painter
+m.badge_name_7f70d917 = Gamer
+m.badge_name_325f4c9 = Artisan
+m.badge_name_fa58270b = Magnet
