Added "go home" to the go menu. We're slowly recreating the old menu we used to have. Now if only it showed owned scenes and friend's homes. Those are gettable from the friends menu, but I might slap them in here too.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -135,7 +135,7 @@ m.game = game
 t.entity_popup = Popup from {0}: {1}
 
 # Menu stuff
-l.go_home = Go home
+b.go_home = Go home
 l.recent_scenes = Recent rooms...
 l.owned_scenes = Owned rooms...
 l.visit_friends = Friends' homes...
