"Copy this link to invite players to your game" widgets after table creation. This URL takes you to the lobby, but it would be amazing to eventually have it stuff you right into the table.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -79,6 +79,7 @@ l.not_rated = Not Rated
 l.invite_friends = Invite your friends to join your game:
 l.invite_no_friends = None of your friends are online.
 l.invite_all = Invite all
+l.invite_link = Email or IM this link to invite a friend to your game:
 
 t.tables = Join a Game
 l.table = Table name
