Sidebar chat fixup. That turned out to not be so painful after all. Checkpoint- cleanup still TODO. - Don't use the TopPanel's "slide chat" mode. It can be ripped out. - Just put the chat in the ChatContainer, and set it as the sidebar. - Changed "slide chat" everywhere (code, i18n) to "sidebar chat" or some variation. - Have the GamePanel tell the overlay to suppress sidebar mode when it does   the gamestub embed overlay mode.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -198,7 +198,7 @@ b.show_chat = Show chat history (F9)
 m.no_friends = No friends online
 m.no_groups = Not in any whirleds
 l.groups = Whirleds
-b.slide_chat = Slide chat
+b.sidebar_chat = Put chat in a sidebar
 b.overlay_chat = Overlay chat
 b.show_occ_list = Show occupants
 b.hide_occ_list = Hide occupants
