We need this fella.

--- a/rsrc/i18n/server.properties
+++ b/rsrc/i18n/server.properties
@@ -31,3 +31,5 @@ m.invite_accepted_body = The invitation that you sent to {0} has been \
 m.reply_subject = Re: {0}
 
 m.new_room_name = {0}'s Room
+
+m.favorites_list_name = Favorites
