Add a game's whirled to the "go" menu when in the game.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -94,7 +94,7 @@ t.gameOver = Game Over
 b.allGames = All Games
 b.backToLobby = Game Lobby
 #b.shop = Game Shop
-#b.gameWhirled = Visit this game's Whirled
+b.gameWhirled = Visit this game's Whirled
 b.rematch = Request a rematch
 b.replay = Play again
 
