Final proofreading on the image test page: "Professional" was too long.  I've changed it to "Craftsman", but it's only textual: we'll need new art, and Jon needs to sign off on the change as well.

--- a/rsrc/en_US/i18n/passport.properties
+++ b/rsrc/en_US/i18n/passport.properties
@@ -22,7 +22,7 @@ m.badge_name_3aa0bef4 = Fixture
 m.badge_name_c4fd834b = Friendly
 m.badge_name_3ca5a071 = Outspoken
 m.badge_name_e6a0e95b = Contender
-m.badge_name_26873aba = Professional
+m.badge_name_26873aba = Craftsman
 m.badge_name_8a19eba3 = Collector
 m.badge_name_1923c147 = Shopper
 m.badge_name_6e67007d = Character Designer
