--- a/rsrc/en_US/i18n/passport.properties
+++ b/rsrc/en_US/i18n/passport.properties
@@ -1,3 +1,6 @@
+#
+# $Id$
+#
 # Passport-related metasoy properties.
 #
 # PREFIX KEY
@@ -12,21 +15,30 @@
 # x.foo = optional translation that may or may not be present
 
 t.badge_awarded = You earned a Badge:
-m.badge_awarded = You earned the "{0}" Badge!
+m.badge_awarded = You earned the {0} Badge, and received a reward of {1} coins!
+
+# level names
+
+m.badge_level_0 = Apprentice
+m.badge_level_1 = Novice
+m.badge_level_2 = Journeyman
+m.badge_level_3 = Adept
+m.badge_level_4 = Master
+m.badge_level_5 = Grand Master
 
 # badge names
 
-m.badge_name_f0c035cd = Furniture Builder
-m.badge_name_e6af01a4 = Judge
-m.badge_name_3aa0bef4 = Fixture
-m.badge_name_c4fd834b = Friendly
-m.badge_name_3ca5a071 = Outspoken
-m.badge_name_e6a0e95b = Contender
-m.badge_name_26873aba = Craftsman
-m.badge_name_8a19eba3 = Collector
-m.badge_name_1923c147 = Shopper
-m.badge_name_6e67007d = Character Designer
-m.badge_name_117171d7 = Landscape Painter
-m.badge_name_7f70d917 = Gamer
-m.badge_name_325f4c9 = Artisan
-m.badge_name_fa58270b = Magnet
+m.badge_name_f0c035cd = {0} Furniture Builder
+m.badge_name_e6af01a4 = {0} Judge
+m.badge_name_3aa0bef4 = {0} Fixture
+m.badge_name_c4fd834b = {0} Friendly
+m.badge_name_3ca5a071 = {0} Outspoken
+m.badge_name_e6a0e95b = {0} Contender
+m.badge_name_26873aba = {0} Craftsman
+m.badge_name_8a19eba3 = {0} Collector
+m.badge_name_1923c147 = {0} Shopper
+m.badge_name_6e67007d = {0} Character Designer
+m.badge_name_117171d7 = {0} Landscape Painter
+m.badge_name_7f70d917 = {0} Gamer
+m.badge_name_325f4c9 = {0} Artisan
+m.badge_name_fa58270b = {0} Magnet
