Put a little button on our slider popups that jumps to ticks. Use ticks for volume and room zooming. Removed the 'scale reset' button on the viewer.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -81,6 +81,7 @@ i.channel = Chat with friends and groups
 i.share = Share or embed this place
 i.comment = Leave a comment about this place
 i.instructions = Game instructions
+i.tickButton = Reset or jump to next tick
 
 # Friends list
 l.emptyStatus = Enter status...
@@ -149,7 +150,6 @@ l.avail_2 = Unavailable
 
 # avatar viewer
 i.spriteScale = Scale...
-i.resetScale = Reset scale
 i.talk = Test speaking action (if any)
 i.idle = Test idle action (if any)
 
