We renamed "Professional" to "Merchant" because the original title was too long for the UI.  These images are stored at a new code because I originally planned to change the BadgeType name as well, but then realized we can't do that, because the database has a bunch of records pointing to the old code.  I'll move the images in a sec.

--- a/rsrc/en_US/i18n/passport.properties
+++ b/rsrc/en_US/i18n/passport.properties
@@ -34,7 +34,7 @@ m.badge_name_3aa0bef4 = {0} Fixture
 m.badge_name_c4fd834b = {0} Friendly
 m.badge_name_3ca5a071 = {0} Outspoken
 m.badge_name_e6a0e95b = {0} Contender
-m.badge_name_26873aba = {0} Craftsman
+m.badge_name_26873aba = {0} Merchant
 m.badge_name_8a19eba3 = {0} Collector
 m.badge_name_1923c147 = {0} Shopper
 m.badge_name_6e67007d = {0} Character Designer
