New button names for the lobby. Annie tells me this was actually confusing people. "Solo" existed before Star Wars, people!

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -42,8 +42,8 @@ m.no_friends_party = None of your friends are playing this game right now. Creat
 
 t.create_game = {0} - Create a Game
 b.create = Create Game
-b.start_multi = Start Multiplayer
-b.start_solo = Play Solo
+b.start_multi = Multiplayer
+b.start_solo = Single Player
 b.cancel = Cancel
 
 t.mini_table = {0} - Waiting for Players
