More usability niggles.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -70,7 +70,7 @@ i.zoom = Zoom the room view
 i.zoom_disabled = The room view is fully shown
 i.avatar = Change your avatar
 i.pet = Play with your pets
-i.editScene = Edit room
+i.editScene = Arrange room
 i.snapshot = Take a room snapshot
 i.height = Stretch the room height to fill your browser
 i.friends = View your friend list
@@ -81,7 +81,10 @@ i.channel = Chat with friends and groups
 i.share = Share or embed this place
 i.comment = Leave a comment about this place
 i.instructions = Game instructions
-i.tickButton = Reset or jump to next tick
+i.tickButton = Reset
+
+# Tooltip for sliders
+i.percent_fmt = {0}%
 
 # Friends list
 l.emptyStatus = Enter status...
@@ -191,7 +194,7 @@ m.no_online_friends = <No online friends>
 m.no_chatters = <No recent chatters>
 m.no_occupants = <None>
 
-b.chatPrefs = Chat preferences
+b.chatPrefs = Chat settings
 b.clearChat = Clear all chat
 b.hide_chat = Hide chat history (F9)
 b.show_chat = Show chat history (F9)
