--- a/rsrc/en_US/i18n/passport.properties
+++ b/rsrc/en_US/i18n/passport.properties
@@ -14,8 +14,8 @@
 # e.foo = error
 # x.foo = optional translation that may or may not be present
 
-t.badge_awarded = You earned a Badge:
-m.badge_awarded = You earned the {0} Badge, and received a reward of {1} coins!
+t.badge_awarded = You earned a Stamp:
+m.badge_awarded = You earned the {0} Stamp, and received a reward of {1} coins!
 
 # level names
 
