Link all of the stamp names to the passport page in the chat notification

--- a/rsrc/en_US/i18n/passport.properties
+++ b/rsrc/en_US/i18n/passport.properties
@@ -15,7 +15,8 @@
 # x.foo = optional translation that may or may not be present
 
 t.badge_awarded = You earned a Stamp:
-m.badge_awarded = You earned the {0} Stamp, and received a reward of {1} coins!
+m.badge_awarded = You earned the [{0} Stamp|command://ViewPassport] and received a reward of {1} \
+coins!
 
 # level names
 
