Added the join now button to the logon panel.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -25,6 +25,7 @@ l.password = Password:
 b.logon = Log on
 b.logout = Log out
 b.cancel = Cancel
+p.sign_up = Don't have a Whirled account yet?
 
 # WarningDialog
 t.warning = Please Read
@@ -207,10 +208,10 @@ b.overlay_chat = Overlay chat
 b.show_occ_list = Show occupants
 b.hide_occ_list = Hide occupants
 
-l.recent_chatters = Recent chatters...
-l.friends = Friends...
-l.in_room = In room...
-l.recent_people = Recently seen...
+#l.recent_chatters = Recent chatters...
+l.friends = Friends
+#l.in_room = In room...
+#l.recent_people = Recently seen...
 
 b.relogon_guest = Re-logon as a guest
 b.edit_prefs = Configure...
