Doh! Last week I changed this command, since we already had VISIT_MEMBER. I searched the code for other uses, but missed this reference in the translations. But: what the heck was GoMemberScene... that probably never worked. Fixed it too. Peanut butter jelly with a baseball bat.

--- a/rsrc/en_US/i18n/notify.properties
+++ b/rsrc/en_US/i18n/notify.properties
@@ -11,9 +11,9 @@
 # e.foo = error
 # x.foo = optional translation that may or may not be present
 
-m.friend_online = [{0}|command://ViewMember/{1}] logged on. [Visit|command://GoMemberLocation/{1}].
+m.friend_online = [{0}|command://ViewMember/{1}] logged on. [Visit|command://VisitMember/{1}].
 m.friend_added = [{0}|command://ViewMember/{1}] is now your friend! \
-[Visit|command://GoMemberScene/{1}].
+[Visit|command://VisitMember/{1}].
 m.friend_removed = You are no longer friends with [{0}|command://ViewMember/{1}].
 m.invite_accepted = {0} just accepted your invitation! Your friend's display name is \
 [{1}|command://ViewMember//{2}].
