--- a/rsrc/en_US/i18n/editing.properties
+++ b/rsrc/en_US/i18n/editing.properties
@@ -53,7 +53,7 @@ i.item_custom = View item custom configuration
 l.item_custom = Custom config
 
 b.make_home = Make this room your home
-b.make_group_home = Make this room the Whirled's home
+b.make_group_home = Make this room the whirled's home
 l.advanced_editing = Advanced editing options
 
 i.reset_location = Move this item to the center of the room
@@ -97,8 +97,8 @@ l.advanced_none = (No advanced options available)
 
 m.home_room_changed = Home room set!
 m.group_home_room_changed = Whirled home room set!
-e.not_room_owner = You may only set a room you own as your Home.
-e.not_room_manager = You must be a Whirled manager to set its Home.
+e.not_room_owner = You may only set a room you own as your home.
+e.not_room_manager = You must be a whirled manager to set its home.
 
 # general editing mode
 
