As long as the build is broken, I'll check this in in pieces, so that it's more visible. - Renamed MoneyType to Currency. - Added translations for it, on the flash side at least.   They're conveniently global, so they never need to be qualified.

--- a/rsrc/en_US/i18n/global.properties
+++ b/rsrc/en_US/i18n/global.properties
@@ -18,6 +18,18 @@ b.cancel = Cancel
 # Common messages
 m.none = <none>
 
+# Money related
+m.coins.0 = 0 coins
+m.coins.1 = 1 coin
+m.coins.n = {0} coins
+m.bars.0 = 0 bars
+m.bars.1 = 1 bar
+m.bars.n = {0} bars
+m.bling = {0} bling
+l.coins = coins
+l.bars = bars
+l.blind = bling
+
 # Connection related
 m.disconnected = You have been disconnected from the server.
 m.session_expired = Your session has expired. Please reload the page.
