Explain a developer's mistake to them when they try to award a prize created by another account.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -107,6 +107,8 @@ m.prize_title = You were awarded a Prize:
 m.prize_earned = You were awarded a prize: "{0}"!
 
 e.unknown_trophy = Requested to award unknown trophy "{0}".
+e.prize_creator_mismatch = You cannot award a prize item that was not created by the \
+  same account that created the game.
 
 e.join_world_game_failed = Failed to join game: {0}
 e.leave_world_game_failed = Failed to leave game: {0}
