Report game errors.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -106,6 +106,22 @@ m.trophy_earned = You earned the "{0}" trophy!
 m.prize_title = You were awarded a Prize:
 m.prize_earned = You were awarded a prize: "{0}"!
 
+t.quest_offer = You're being offered a quest.
+t.quest_completion = You completed a quest!
+b.accept_quest = Accept
+b.decline_quest = Decline
+
+#
+# Gamestub-specific stuff
+
+t.players = Player list
+i.scores = View scores
+
+#
+# Errorz!
+
+e.game_error = Game error: {0}
+
 e.unknown_trophy = Requested to award unknown trophy "{0}".
 e.prize_creator_mismatch = You cannot award a prize item that was not created by the \
   same account that created the game.
@@ -117,15 +133,5 @@ e.player_not_found = Player not found!
 e.private_game = Your friend is in a private game.
 e.unwatchable_game = Your friend is playing an unwatchable game.
 e.no_longer_lobbying = Your friend is no longer sitting at a pending game table.
-e.game_in_progress = Your friend''s game has already started.
-e.game_table_full = Your friend''s game table is full.
-
-t.quest_offer = You''re being offered a quest.
-t.quest_completion = You completed a quest!
-b.accept_quest = Accept
-b.decline_quest = Decline
-
-#
-# Gamestub-specific stuff
-t.players = Player list
-i.scores = View scores
+e.game_in_progress = Your friend's game has already started.
+e.game_table_full = Your friend's game table is full.
