More error reporting improvement.

--- a/rsrc/en_US/i18n/item.properties
+++ b/rsrc/en_US/i18n/item.properties
@@ -41,3 +41,5 @@ m.prop = prop
 m.default = <Default>
 
 m.not_listed = That {0} item is not listed in the shop.
+
+e.no_such_item = That item does not exist.
