--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -123,8 +123,9 @@ i.scores = View scores
 e.game_error = Game error: {0}
 
 e.unknown_trophy = Requested to award unknown trophy "{0}".
-e.prize_creator_mismatch = You cannot award a prize item that was not created by the \
-  same account that created the game.
+e.unknown_prize = Requested to award unknown prize "{0}".
+e.prize_creator_mismatch = The prize "{0}" cannot be awarded as it was created by a \
+  different account than the one that created the game.
 
 e.join_world_game_failed = Failed to join game: {0}
 e.leave_world_game_failed = Failed to leave game: {0}
