--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -96,6 +96,7 @@ i.go = Go...
 b.back = Back
 l.visit_friends = Visit friends
 b.group_game = Play this whirled's game
+b.group_page = View this whirled's details
 
 # note: the embed tag should be coordinated with embedding tags used in WidgetUtilImpl.java
 m.embed = <object width='{2}' height='{3}' classid='clsid:d27cdb6e-ae6d-11cf-96b8-444553540000' codebase='http://active.macromedia.com/flash7/cabs/swflash.cab#version=9,0,0,0' allowScriptAccess='always'><param name='movie' value='{1}'/><param name='wmode' value='opaque'/><param name='FlashVars' value='{0}'/><embed width='{2}' height='{3}' flashvars='{0}' src='{1}' allowScriptAccess='always' wmode='opaque' pluginspace='http://www.macromedia.com/go/getflashplayer' ntype='application/x-shockwave-flash'></embed></object><br/><center><a href="http://whirled.com/" target="_top">Launch the full version of Whirled</a></center>
