Enabled the "Game Shop" menu item in the go menu.

--- a/rsrc/en_US/i18n/game.properties
+++ b/rsrc/en_US/i18n/game.properties
@@ -93,7 +93,7 @@ l.guest_flowprog_note = Sign up! Save your game progress! Keep your coins!
 t.gameOver = Game Over
 b.allGames = All Games
 b.backToLobby = Game Lobby
-#b.shop = Game Shop
+b.shop = Game Shop
 b.game_whirled = Visit this game's whirled
 b.rematch = Request a rematch
 b.replay = Play again
