Placeholder AVRG button and code

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -83,6 +83,7 @@ i.share = Share or embed this place
 i.comment = Leave a comment about this place
 i.instructions = Game instructions
 i.tickButton = Reset
+i.avrg = View game options
 
 # Tooltip for sliders
 i.percent_fmt = {0}%
