Hook up AVRG menu with items to view comments, exit the game and invite friends (disabled)

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -235,6 +235,11 @@ t.email_share = Share by email
 t.grab_link = Grab the link
 t.embed = Embed it
 
+# AVRG menu
+b.avrgExit = Exit game
+b.avrgInvite = Invite friends
+b.avrgComment = Go to comments
+
 # Problems with urls
 e.no_navigate = Unable to load requested page: {0}
 t.missedUrl = Unable to navigate to URL
