Changed the way the room occupant list updates when you move between rooms which makes it actually work.
Further consistentification of our chat messages. Now we don't use quotes
anywhere (except when reporting an away message), which is mostly how things
worked before but only because everything was a chat channel. Now that we have
room chat again, room chat needs to be like channel chat.

--- a/rsrc/en_US/i18n/chat.properties
+++ b/rsrc/en_US/i18n/chat.properties
@@ -44,12 +44,12 @@ c.back = back
 
 # Chat formatting
 m.speak_format = {0}:
-m.think_format = {0} thinks,
-m.shout_format = {0} shouts,
+m.think_format = {0} thinks:
+m.shout_format = {0} shouts:
 m.emote_format = {0}
-m.tell_format = {0} tells you,
-m.told_format = You told {0},
-m.broadcast_format = {0} broadcasts,
+m.tell_format = {0}:
+m.told_format = You said:
+m.broadcast_format = {0} broadcasts:
 m.channel_speak_format = {0}:
 m.channel_think_format = {0} thinks:
 m.channel_shout_format = {0} shouts:
