On further thought, why is the MsoyController even involved? How about we have the ShareDialog do the sharing.
Also made the UI add scrollbars in sane places rather than insane places when
the invalid email is too long, and tweaked the error message.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -235,7 +235,7 @@ t.email_share = Share by email
 t.grab_link = Grab the link
 t.embed = Embed it
 
-e.invalid_addr = This address looks wrong: {0}
+e.invalid_addr = '{0}' does not look like a valid email address.
 
 # AVRG menu
 b.avrgExit = Exit game
