When building things (this is true of most creative endeavors, not just programming), there is the first 90% and then there is the last 90%. The last 90% of the sharing feature was not done and I find myself here doing it this morning:
- a distinction should be made when sharing rooms and games; the email called
everything a room, which it was not, and the user interface called everything a
place which was misleading at best;

- the share button should only be visible when you are actually in a room or
game, it was visible always and if you clicked it during those exciting in
between times when you're not anywhere, it threw a bunch of exceptions and
choked on itself;

- feedback should be provided when a user takes an action; sometimes feedback
is naturally provided, in the case of their request to send email to their
friends, they've just put themselves out on a limb for our benefit, we should
be kind enough to let them know that we did in fact make our best effort to
send the email addresses they requested and that we love them;

- the game lobby link was incorrect, but the GWT client was forgiving and did
the right thing; let's make it correct just for the love of correctness.

--- a/rsrc/en_US/i18n/general.properties
+++ b/rsrc/en_US/i18n/general.properties
@@ -218,7 +218,8 @@ l.friends = Friends
 b.relogon_guest = Re-logon as a guest
 b.edit_prefs = Configure...
 
-t.share = Share this place
+t.share_room = Share this Room
+t.share_game = Share this Game
 l.embed_choose_size = Choose an embed size:
 l.embed_size0 = Mini TV
 l.embed_size1 = Small
@@ -227,7 +228,7 @@ l.embed_size3 = Large
 l.embed_dimensions = ({0}x{1})
 
 l.embed_instruction = Copy the HTML below to your blog or website:
-l.link_instruction = Link to this place. Just copy and paste!
+l.link_instruction = Link directly here. Just copy and paste!
 l.email_addresses = Enter email addresses below:
 l.email_message = A personalized message to include:
 
@@ -236,6 +237,7 @@ t.grab_link = Grab the link
 t.embed = Embed it
 
 e.invalid_addr = '{0}' does not look like a valid email address.
+m.share_email_sent = Email sent. Thanks for sharing!
 
 # AVRG menu
 b.avrgExit = Exit game
